@@ -1,3 +1,10 @@
+2018-09-16  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* 43464: Src/exec.c, Src/jobs.c, Src/signals.c, Src/utils.c:
+	Remember the last process group to attach to the terminal, not
+	just the set of running processes which did.  Don't
+	record process groups for ESUB_ASYNC subshells.
+
 2018-09-14  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* unposted: Completion/Unix/Command/_subversion: _svn: Allow
